[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/4x4.gd" type="Script" id=1]
[ext_resource path="res://scenes/color_block.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/bomb.png" type="Texture" id=3]
[ext_resource path="res://assets/img/skip.png" type="Texture" id=4]
[ext_resource path="res://assets/img/sqoin.png" type="Texture" id=5]
[ext_resource path="res://scenes/checkmark.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/back.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/minimap.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/shapes/4x4.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/lato32.fnt" type="BitmapFont" id=10]
[ext_resource path="res://scenes/ui/resume.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/panel.tscn" type="PackedScene" id=12]

[node name="4x4" type="Node2D"]

script/script = ExtResource( 1 )

[node name="timer_preview" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="timer_wait" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="color_block" parent="." instance=ExtResource( 2 )]

margin/left = 255.0
margin/top = 810.0
margin/right = 364.0
margin/bottom = 919.0
params/resize_mode = 0
params/scale = Vector2( 0.85, 0.85 )
params/stretch_mode = 0

[node name="bomb" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 810.0
margin/right = 519.0
margin/bottom = 919.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.85, 0.85 )
params/stretch_mode = 0

[node name="skip" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 810.0
margin/right = 209.0
margin/bottom = 919.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.85, 0.85 )
params/stretch_mode = 0

[node name="sqoin" type="Sprite" parent="."]

transform/pos = Vector2( 547, 60 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="checkmark" parent="." instance=ExtResource( 6 )]

[node name="back" parent="." instance=ExtResource( 7 )]

margin/left = 20.0
margin/top = 25.0
margin/right = 84.0
margin/bottom = 89.0

[node name="minimap" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 90, 90 )

[node name="board" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 110, 360 )

[node name="sqoins" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 40.0
margin/right = 500.0
margin/bottom = 85.0
custom_fonts/font = ExtResource( 10 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resume" parent="." instance=ExtResource( 11 )]

visibility/visible = false

[node name="panel" parent="." instance=ExtResource( 12 )]

visibility/visible = false


